Fix: inline list alignment (#1043)
* fix: inline list width

* fix: list prop context

--- a/packages/components/lists/bolt-list/src/list.scss
+++ b/packages/components/lists/bolt-list/src/list.scss
@@ -22,6 +22,7 @@
 .c-bolt-list--display-inline {
   display: inline-flex;
   flex-flow: row wrap;
+  width: 100%; // The inline here is talking about the items inside, the List component itself is still a block level element that would fill up the space of any container.
 }
 
 .c-bolt-list--display-flex {
